2012-08-23  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* music/music-config.hh-in: (and many other files) Some #include
	reorganization: Let those who need it include music-config.hh as
	the common first header file. Let music-config.hh be the only one
	including music/debug.hh.

	* music/ordered_ilist.hh (OrderedIList::iterator): Satisfy BG/P
	compiler which complained that an OrderedIList member creates a
	circular reference with respect to type.

2012-08-22  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* music/port.hh, port.cc (Port::checkIndexMap): New member.

	* port.cc (OutputPort::mapImpl, InputPort::mapImpl: Use
	checkIndexMap.

	* event_routing_map.cc (OutputRoutingMap::fillRouter): Ask
	EventRouter if it needs as few points as possible rather than as
	few intervals as possible, and close gaps only in the latter case.
	This is important when using the new table based routing together
	with simulators with round-robin allocation, such as NEST.

	* music/event_router.hh: Let table based routers say that they
	need few points rather than intervals.

2012-08-21  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* music/interval_table.hh, music/ordered_ilist.hh: Introduced an
	interval table optimization variable MUSIC_ITABLE_FLAVOR with the
	options MUSIC_VANILLA, MUSIC_TRIMMED, MUSIC_COMPACT and
	MUSIC_SCATTERED explained at the top of music/interval_table.hh.

	* music/event_router.hh: #define MUSIC_ITABLE_FLAVOR to
	MUSIC_SCATTERED.

	* music/interval_table.hh (IntervalTable::search): Check index
	against tableSize_ instead of container size.

	* music/subconnector.hh, music/event_routing_map.hh: Don't
	#include <music/event_router.hh> which contains heavy template
	stuff. Instead forward declare EventRouter.  Since both
	subconnector.hh and event_routing_map.hh are included by other
	header files, this speeds up compilation and decreases the
	dependencies in the code tree.

	* connector.cc, event_routing_map.cc, port.cc, subconnector.cc: