@@ -1,5 +1,9 @@
 2012-08-23  Mikael Djurfeldt  <mikael@djurfeldt.com>
 
+	* interval.cc: New file.
+
+	* music/interval.hh: Make Interval:s printable.
+
 	* music/music-config.hh-in: (and many other files) Some #include
 	reorganization: Let those who need it include music-config.hh as
 	the common first header file. Let music-config.hh be the only one
